shipment and cost function